# binary_matrix

./: Cargo.toml  LICENSE.md  README.md
src/: base_matrix.rs  binary_dense_matrix.rs  binary_dense_matrix_simd.rs  binary_dense_vector.rs  lib.rs  transpose64x64_aarch64_intrinsics.rs  transpose64x64_asm_aarch.rs  transpose64x64_asm_aarch2.rs  transpose64x64_neon_recursive.rs  transpose64x64_portable_simd_recursive.rs  transpose64x64_unroll.rs
