[package]
name = "binary_matrix"
version = "0.1.3"
edition = "2021"
authors = ["Christopher Swenson <swenson@swenson.io>"]
description = "Dense binary matrix operations."
repository = "https://github.com/swenson/binary_matrix"
license = "MIT"
keywords = ["math", "matrix", "binary"]
categories = ["mathematics"]

[features]
default = []
rand = ["dep:rand"]
simd = []

[dependencies]
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
