[package]
name = "binary_matrix"
version = "0.1.4"
edition = "2021"
authors = ["Christopher Swenson <swenson@swenson.io>"]
description = "Dense binary matrix operations."
repository = "https://github.com/swenson/binary_matrix"
license = "MIT"
keywords = ["math", "matrix", "binary"]
categories = ["mathematics"]

[features]
default = []
rand = ["dep:rand"]
simd = []

[dependencies]
rand = { version = "0.8.5", optional = true }
paste = "1.0.14"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
